# marca-workflow

./: README.md  pyproject.toml
dagsweep/: __init__.py  _executor.py  _pipeline.py  _step.py
marca_workflow/: __init__.py  _pipeline.py
tests/: test_dagsweep.py  test_marca_workflow.py
