[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "marca-workflow"
version = "0.1.1"
description = "Declarative, prefix-reusing workflow sweeps for MARCA."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Maicondalllg", email = "maicon.dallagnol@unesp.br" },
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["marca_workflow*"]

[tool.setuptools.package-data]
marca_workflow = ["py.typed"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "twine>=6.2.0",
]
